# 334A

./: .gitmodules  CreateFixedLengthDB  CreateFixedLengthDB.c  ReadAndFindDB  ReadAndFindDB.c  _README.md  _WRITEUP.txt  _runTests.sh  american-english-small  english-small.db  english.db  foo  makefile  out1.db  reader.h  test1.txt
assn1/: .editorconfig  _WRITEUP.txt  _runTests.sh  reader.h
assn1/tests/: american-english-small  english.db  out1.db  out3.db  test3.txt  test4.txt
assn2/: .gitignore  README.md  _WRITEUP.txt  cs334.c  makefile
assn3/: .gitignore  Cargo.toml  README.md  SP21_CS334_HW3.docx  output.txt
assn3/HW3_StarterCode/: imgHistogram.c
assn3/src/: main.rs
tests/: out1.db  out2.db  out3.db  out4.db  out5.db  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
