[package]
name = "histogram-folder"
version = "0.1.0"
authors = ["Kai Richardson <richardk22@up.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1" # Arguments
lodepng = "3.4" # PNG Lib
tokio = {version = "1", features = ["sync"]} # Threading
