[package]
name = "histogram-folder"
version = "1.0.0"
authors = ["Kai Richardson <richardk22@up.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1" # Arguments
lodepng = "3.4" # PNG Lib
unix-semaphore = { git = "https://github.com/vorner/unix-semaphore" } # Semaphore, we only need to support ubuntu anyways

[profile.release]
lto = "thin" # Fast link-time optimization
